update product entity
